@@ -4,8 +4,10 @@
 - added: `F.cors(url, origins, methods, headers, credentials)`
 - added: `config['default-response-maxage']`, default value `11111111`
 
+- updated: (IMPORTANT) Array.async([NEW: threadCount (Number)], [callback]) supports `threads`
 - updated: Date.format(format, [resource_name]) supports name of months via `MMM` (short) and `MMMM` (full)
 - updated: Resources support months e.g. `January     : Január`
+
 
 - fixed: binary / executable for Windows
 - fixed: SUCCESS()
